--- a/web/assets/css/partials/_markdown.scss
+++ b/web/assets/css/partials/_markdown.scss
@@ -5,6 +5,13 @@
 @include scope('markdown') {
     overflow-x: auto;
 
+    h1, h2, h3,
+    h4, h5, h6 {
+        &:first-child {
+            margin-top: 0;
+        }
+    }
+
     h1,
     h2 {
         border-bottom: 1px dotted $Color-Light_Grey;
@@ -14,14 +21,17 @@
     h1,
     h2,
     h3 {
-        margin-bottom: 10px;
+        margin: {
+            bottom: $Settings-Page_Section-Small_Margin;
+            top: $Settings_Page_Section-Small_Margin;
+        }
     }
 
     h4,
     h5,
     h6,
     p {
-        margin-bottom: 5px;
+        margin-bottom: $Settings-Page_Section-Small_Margin;
 
         &:last-child {
             margin-bottom: 0;
